@@ -1,5 +1,6 @@
 libdoesntexist2 1.0 libbaz2
 libdoesntexist2 1.0 libbaz2
 libbaz2 1.1 libbaz2
+libbaz3 1 libbaz2
 udeb: libdoesntexist2 1.0 libbaz2
 udeb: libdoesntexist2 1.0 libbaz2
