@@ -5,13 +5,15 @@ E: libbaz1: duplicate-entry-in-shlibs-control-file libdoesntexist2 1.0
 E: libbaz1: duplicate-entry-in-shlibs-control-file udeb: libdoesntexist2 1.0
 E: libbaz1: file-directly-in-usr-share-doc usr/share/doc/README.Debian
 E: libbaz1: ldconfig-symlink-missing-for-shlib usr/lib/libbaz2.so.1.0 usr/lib/libfoo2.so.1.0.3b libbaz2.so.1.0
+E: libbaz1: ldconfig-symlink-missing-for-shlib usr/lib/libbaz3.so.1 usr/lib/libbaz3.so.1.0.3b libbaz3.so.1
 E: libbaz1: maintainer-shell-script-fails-syntax-check postinst
 E: libbaz1: postinst-must-call-ldconfig usr/lib/libfoo2.so.1.0.3b
 E: libbaz1: sharedobject-in-library-directory-not-actually-a-shlib usr/lib/libbaz1.so.1.0.3b
 E: libbaz1: shlib-missing-in-control-file libbaz2 1.0 for usr/lib/libfoo2.so.1.0.3b
 E: libbaz1: shlib-with-executable-bit usr/lib/libfoo2.so.1.0.3b 0755
-E: libbaz1: shlib-with-non-pic-code usr/lib/libbaz1.so.1.0.3b
+E: libbaz1: shlib-with-non-pic-code usr/lib/libbaz3.so.1.0.3b
 E: libbaz1: unstripped-binary-or-object ./usr/lib/libbaz1.so.1.0.3b
+E: libbaz1: unstripped-binary-or-object ./usr/lib/libbaz3.so.1.0.3b
 E: libbaz1: unstripped-binary-or-object ./usr/lib/libfoo2.so.1.0.3b
 E: libbaz2: postinst-must-call-ldconfig usr/lib/libbaz2.so.1.0.3b
 E: libbaz2: symlink-should-be-relative usr/share/doc/libbaz2/changelog.gz /usr/share/doc/lintian/changelog.gz
@@ -19,6 +21,7 @@ I: libbaz1-dev: no-md5sums-control-file
 I: libbaz1: no-md5sums-control-file
 I: libbaz1: possible-non-posix-code-in-maintainer-script postinst:6 '[ -d /usr/doc -a ! -e /usr/doc/$PKG -a '
 I: libbaz1: possible-non-posix-code-in-maintainer-script prerm:5 '[ \( "$1" = "upgrade" -o "$1" = "remove" \) -a '
+I: libbaz1: several-sonames-in-same-package libbaz3.so.1 libbaz2.so.1.0
 I: libbaz2-dev: no-md5sums-control-file
 I: libbaz2: no-md5sums-control-file
 W: libbaz source: ancient-standards-version 3.2.1 (current is 3.7.2)
@@ -26,7 +29,7 @@ W: libbaz source: changelog-should-mention-nmu
 W: libbaz source: package-uses-deprecated-debhelper-compat-version 1
 W: libbaz source: source-nmu-has-incorrect-version-number 1
 W: libbaz1: missing-depends-line
-W: libbaz1: package-name-doesnt-match-sonames libbaz2-1.0
+W: libbaz1: package-name-doesnt-match-sonames libbaz3-1 libbaz2-1.0
 W: libbaz1: postinst-should-not-set-usr-doc-link
 W: libbaz1: unused-shlib-entry-in-control-file libbaz2 1.1
 W: libbaz1: unused-shlib-entry-in-control-file libdoesntexist2 1.0
